MDEV-5894 MySQL BUG#34750: Print database name in Unknown Table error message